# personal-page

./: .gitignore  QUICKSTART.md  README.md  pyproject.toml
ci/: .env.example  Dockerfile  docker-compose.yaml  entrypoint.sh  nginx.conf
src/: manage.py
src/conf/: settings.py  urls.py
src/home/: admin.py  forms.py  models.py  urls.py  views.py
src/home/management/commands/: forward_messages.py
src/home/migrations/: 0001_initial.py  0002_load_data.py  0003_delete_message.py  0004_aboutme_description_asset_description_and_more.py  0005_alter_contacts_details_list_alter_contacts_link_list_and_more.py  _init_data.py
src/home/static/css/: animate.css  responsive.css  style.css
src/home/static/js/: jquery.easing-1.4.min.js  jquery.easing.1.3.js  wow.js
src/home/templates/: index.html
src/home/templates/includes/: about_me.html  contacts.html  footer.html  navbar.html  portfolio.html  promo.html  services.html  start_screen.html
